# simpler-git

./: .gitignore  Cargo.toml
src/: lib.rs  local.rs  remote.rs
