[package]
name = "simpler-git"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"
description = "A simple wrap around git2, for providing a more natural way to work with git repositories."
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.17"
